bug: set background images for feature boxes in dark mode

--- a/src/components/About/homeabout.css
+++ b/src/components/About/homeabout.css
@@ -60,7 +60,6 @@
     0 6px 6px -1px rgba(8, 11, 14, 0.1);
   border: 1px solid #f7f8f9;
   margin: 10px;
-  background-color: #fff;
   justify-content: center;
 }
 
